--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bob esponja cv</title>
+	<title>Steve-cv</title>
 	<link rel="stylesheet" type="text/css" href="estiloCV.css">
   <script src="https://kit.fontawesome.com/8fdba88123.js" crossorigin="anonymous"></script>
 
